把tex拆开了，结构更加明确

--- a/Kalman-filtering.tex
+++ b/Kalman-filtering.tex
@@ -54,750 +54,26 @@
 		\tableofcontents[currentsection] % 自动生成目录，并高亮当前正在讲的章节
 	\end{frame}
 }
-%================================================================
-\section{背景引入}
-%================================================================
 
-\begin{frame}
-	\frametitle{现实世界的困境：不确定性}
-	\begin{columns}
-		\column{0.6\textwidth}
-		在信息工程与控制领域，我们面临两个永恒的问题：
-		\begin{itemize}
-			\item \textbf{不准确的模型 (Process Noise)}：
-			      \begin{itemize}
-				      \item 摩擦力、风阻难以完美建模
-				      \item 积分误差随时间累积（Dead Reckoning Drifting）
-			      \end{itemize}
-			\item \textbf{不准确的观测 (Measurement Noise)}：
-			\item GPS 信号多径效应
-			\item 传感器热噪声
-		\end{itemize}
+\input{./source/背景.tex}
 
-		\column{0.4\textwidth}
-		\begin{block}{核心问题}
-			当我们既不能完全相信\textbf{推算}，也不能完全相信\textbf{观测}时，如何获知系统的\textbf{真实状态}？
-		\end{block}
-	\end{columns}
-\end{frame}
+\input{./source/数学模型构建.tex}
 
-\begin{frame}
-	\frametitle{卡尔曼滤波 (Kalman Filter) 的诞生}
-	\begin{itemize}
-		\item \textbf{提出者}：Rudolf E. Kalman (1960)
-		\item \textbf{核心论文}：\textit{A New Approach to Linear Filtering and Prediction Problems}
-		\item \textbf{本质}：
-		      \begin{itemize}
-			      \item 并不是为了滤除某些频率（不同于低通/高通滤波器）。
-			      \item 是一种\textbf{最优递归估计算法} (Optimal Recursive Estimator)。
-			      \item 在最小均方误差 (MMSE) 准则下，对系统状态进行最优估计。
-		      \end{itemize}
-		\item \textbf{应用场景}：阿波罗登月导航、雷达目标追踪、导弹制导、股市预测。
-	\end{itemize}
-\end{frame}
+\input{./source/核心算法.tex}
 
-%================================================================
-\section{数学模型构建}
-%================================================================
+\input{./source/具体数值带入.tex}
 
-\begin{frame}
-	\frametitle{1. 状态方程 (预测模型) 深度解析}
-	\begin{equation}
-		\bm{x}_k = \underbrace{\bm{F} \bm{x}_{k-1}}_{\text{惯性演变}} + \underbrace{\bm{B} \bm{u}_k}_{\text{控制输入}} + \underbrace{\bm{w}_k}_{\text{过程噪声}}
-	\end{equation}
+\input{source/工程应用仿真.tex}
 
-	\begin{itemize}
-		\item \textbf{惯性演变 ($\bm{F}\bm{x}_{k-1}$)}：
-		      \begin{itemize}
-			      \item \textbf{含义}：基于物理定律的自然推演。如果没有外力和干扰，系统下一刻应该在哪？
-			      \item \textbf{举例}：根据“路程 = 速度 $\times$ 时间”，由上一刻的位置和速度，推算当前时刻的预计位置。
-			      \item $\bm{F}$ (状态转移矩阵) 捕捉了这些确定性的物理规则。
-		      \end{itemize}
+\input{source/EKF.tex}
 
-		\item \textbf{控制输入 ($\bm{B}\bm{u}_k$)}：
-		      \begin{itemize}
-			      \item \textbf{含义}：由于我们对系统的干预（Control）所引起的状态改变。
-			      \item \textbf{举例}：司机踩下油门 ($\bm{u}_k$)，通过车辆动力学模型 ($\bm{B}$) 转化为加速度，从而改变车辆的速度和位置。
-		      \end{itemize}
+\input{source/前沿探索.tex}
 
-		\item \textbf{过程噪声 ($\bm{w}_k$)}：
-		      \begin{itemize}
-			      \item \textbf{含义}：物理模型中未考虑到的现实扰动（如侧风、路面打滑）。
-		      \end{itemize}
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{2. 观测方程 (测量模型) 深度解析}
-	\begin{equation}
-		\bm{z}_k = \underbrace{\bm{H} \bm{x}_k}_{\text{理想观测}} + \underbrace{\bm{v}_k}_{\text{测量噪声}}
-	\end{equation}
-
-	\begin{itemize}
-		\item \textbf{理想观测 ($\bm{H}\bm{x}_k$)}：
-		      \begin{itemize}
-			      \item \textbf{含义}：状态空间的映射与降维。如果传感器完美无瑕，它应该读到什么数值？
-			      \item \textbf{矩阵作用}：系统状态 $\bm{x}$ 可能包含 [位置, 速度, 加速度] ($3 \times 1$)，但 GPS 传感器 $\bm{z}$ 只能读取 [位置] ($1 \times 1$)。
-			      \item $\bm{H}$ (观测矩阵) 就是一个提取器：例如 $\begin{bmatrix} 1 & 0 & 0 \end{bmatrix} \times \begin{bmatrix} pos \\ vel \\ acc \end{bmatrix} = pos$。
-		      \end{itemize}
-
-		\item \textbf{测量噪声 ($\bm{v}_k$)}：
-		      \begin{itemize}
-			      \item \textbf{含义}：传感器自身的“不靠谱”程度。包括电子热噪声、量化误差或环境干扰。
-			      \item 我们假设它是白噪声，服从 $N(0, \bm{R})$。
-		      \end{itemize}
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{符号含义解析}
-	\small
-	\begin{table}
-		\centering
-		\begin{tabular}{cll}
-			\toprule
-			符号         & 含义                   & 维度           \\
-			\midrule
-			$\bm{x}_k$ & $k$时刻的状态向量 (位置, 速度等) & $n \times 1$ \\
-			$\bm{F}$   & 状态转移矩阵 (物理规律)        & $n \times n$ \\
-			$\bm{u}_k$ & 外部控制量 (如加速度输入)       & $l \times 1$ \\
-			$\bm{z}_k$ & $k$时刻的观测向量 (传感器读数)   & $m \times 1$ \\
-			$\bm{H}$   & 观测矩阵 (映射关系)          & $m \times n$ \\
-			\bottomrule
-		\end{tabular}
-	\end{table}
-
-	\vspace{0.5cm}
-	\textbf{关键假设：} 噪声服从高斯分布 (Gaussian Distribution)
-	\begin{itemize}
-		\item 过程噪声 $\bm{w}_k \sim N(0, \bm{Q})$
-		\item 测量噪声 $\bm{v}_k \sim N(0, \bm{R})$
-	\end{itemize}
-\end{frame}
-
-%================================================================
-\section{核心算法}
-%================================================================
-
-\begin{frame}
-	\frametitle{算法流程总览}
-	卡尔曼滤波是一个\textbf{“预测 (Predict) —— 更新 (Update)”} 的循环过程。
-	\vspace{0.5cm}
-
-	\begin{center}
-		\fbox{\parbox{0.8\textwidth}{\centering
-				\textbf{Step 1: 预测} \\
-				(根据上一刻状态，猜这一刻在哪) \\
-				$\downarrow$ \\
-				\textbf{Step 2: 计算卡尔曼增益} \\
-				(决定信模型多一点，还是信传感器多一点) \\
-				$\downarrow$ \\
-				\textbf{Step 3: 更新} \\
-				(结合观测值，修正刚才的猜测)
-			}}
-	\end{center}
-\end{frame}
-
-\begin{frame}
-	\frametitle{第一阶段：时间更新 (预测)}
-	在还未获得传感器数据之前，基于物理模型进行的\textbf{先验估计}：
-
-	\begin{alertblock}{1. 状态预测}
-		\begin{equation}
-			\hat{\bm{x}}_k^- = \bm{F} \hat{\bm{x}}_{k-1} + \bm{B} \bm{u}_k
-		\end{equation}
-		\small 注：上标 $^-$ 表示先验 (A Priori) 估计。
-	\end{alertblock}
-
-	\begin{alertblock}{2. 协方差预测 (误差传播)}
-		\begin{equation}
-			\bm{P}_k^- = \bm{F} \bm{P}_{k-1} \bm{F}^T + \bm{Q}
-		\end{equation}
-		\small $\bm{P}$ 代表估计的不确定性。加上 $\bm{Q}$ 表示预测过程引入了新的不确定性。
-	\end{alertblock}
-\end{frame}
-
-\begin{frame}
-	\frametitle{关键步骤：卡尔曼增益 (Kalman Gain) —— 1. 思路篇}
-
-	\begin{block}{核心思想：不确定性的权衡}
-		卡尔曼增益 $\bm{K}_k$ 的本质是一个\textbf{动态权衡因子 (Weighting Factor)}。
-		它时刻在问一个问题：
-		\vspace{0.3cm}
-		\begin{center}
-			\textit{“现在的预测误差 ($\bm{P}_k^-$) 和 观测误差 ($\bm{R}$)，哪一个更小？”}
-		\end{center}
-	\end{block}
-
-	\begin{itemize}
-		\item \textbf{逻辑：} 谁的方差小（信息量大、更可信），我就偏向谁。
-		\item \textbf{动态性：}
-		      \begin{itemize}
-			      \item 这不是一个固定的常数（如互补滤波中的 $\alpha=0.98$）。
-			      \item 它随时间变化，每一次迭代都会根据上一次的置信度自动调整。
-		      \end{itemize}
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{关键步骤：卡尔曼增益 (Kalman Gain) —— 2. 矩阵直觉篇}
-	为什么公式里有那么多 $\bm{H}^T$ 和逆矩阵？
-	\begin{equation*}
-		\bm{K}_k = \underbrace{\bm{P}_k^- \bm{H}^T}_{\text{相关性}} \underbrace{(\bm{H} \bm{P}_k^- \bm{H}^T + \bm{R})^{-1}}_{\text{归一化}}
-	\end{equation*}
-	\begin{itemize}
-		\item \textbf{空间投影问题}：
-		      \begin{itemize}
-			      \item 状态误差 $\bm{P}_k^-$ 在\textbf{状态空间} (n维)。
-			      \item 观测误差 $\bm{R}$ 在\textbf{测量空间} (m维)。
-			      \item 我们不能直接把它们相加，必须把 $\bm{P}_k^-$ 投影到测量空间。
-		      \end{itemize}
-		\item \textbf{$\bm{H} \bm{P}_k^- \bm{H}^T$}：这是预测误差在\textbf{测量空间}的投影。即“如果在状态空间有这么多不确定性，对应到传感器读数上会有多大波动”。
-		\item \textbf{分母求逆}：$(\bm{S})^{-1}$ 相当于除以“总不确定性”。
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{关键步骤：卡尔曼增益 (Kalman Gain) —— 3. 算法篇}
-
-	\begin{block}{3. 计算卡尔曼增益}
-		\begin{equation}
-			\bm{K}_k = \bm{P}_k^- \bm{H}^T (\bm{H} \bm{P}_k^- \bm{H}^T + \bm{R})^{-1}
-		\end{equation}
-	\end{block}
-
-	\begin{columns}
-		\column{0.5\textwidth}
-		\textbf{复杂矩阵运算的直观类比：}\\
-		假设是一维标量系统（$H=1$）：
-		$$ K_k = \frac{P_k^-}{P_k^- + R} $$
-		\column{0.5\textwidth}
-		\textbf{含义解析：}
-		\begin{itemize}
-			\item \textbf{分子} ($P_k^-$)：预测误差的方差。
-			\item \textbf{分母} ($P_k^- + R$)：总误差（预测+观测）。
-			\item \textbf{结果}：预测误差在总误差中的占比。
-		\end{itemize}
-	\end{columns}
-\end{frame}
-
-\begin{frame}
-	\frametitle{关键步骤：卡尔曼增益 (Kalman Gain) —— 4. 效果篇}
-	通过极限情况，我们可以清晰看到 $\bm{K}_k$ 的调节机制：
-
-	\vspace{0.5cm}
-	\begin{columns}
-		\column{0.48\textwidth}
-		\begin{alertblock}{情况 A: 传感器极准 ($\bm{R} \to 0$)}
-			\begin{itemize}
-				\item 此时 $K_k \approx \frac{P}{P} = 1$ (最大)。
-				\item 状态更新变为：\\
-				      $\hat{x}_k = \hat{x}_k^- + 1 \cdot (z_k - \hat{x}_k^-) = z_k$
-				\item \textbf{结论}：完全信任观测值，忽略模型预测。
-			\end{itemize}
-		\end{alertblock}
-
-		\column{0.48\textwidth}
-		\begin{exampleblock}{情况 B: 模型极准 ($\bm{P}_k^- \to 0$)}
-			\begin{itemize}
-				\item 此时 $K_k \approx \frac{0}{0+R} = 0$ (最小)。
-				\item 状态更新变为：\\
-				      $\hat{x}_k = \hat{x}_k^- + 0 = \hat{x}_k^-$
-				\item \textbf{结论}：完全信任模型预测，忽略传感器波动。
-			\end{itemize}
-		\end{exampleblock}
-	\end{columns}
-\end{frame}
-
-\begin{frame}
-	\frametitle{第二阶段：完成测量更新}
-	算出增益 $\bm{K}_k$ 后，我们就可以融合数据并更新系统信心。
-
-	\begin{block}{4. 状态更新 (后验估计)}
-		\begin{equation}
-			\hat{\bm{x}}_k = \hat{\bm{x}}_k^- + \bm{K}_k \underbrace{(\bm{z}_k - \bm{H} \hat{\bm{x}}_k^-)}_{\text{残差 (Innovation)}}
-		\end{equation}
-		\small \textbf{最优估计 = 预测 + 修正量}。残差代表了“观测值与预测值的偏差”。
-	\end{block}
-
-	\begin{block}{5. 协方差更新}
-		\begin{equation}
-			\bm{P}_k = (\bm{I} - \bm{K}_k \bm{H}) \bm{P}_k^-
-		\end{equation}
-		\small 更新系统的不确定性。因为融合了新信息，通常 $\bm{P}_k < \bm{P}_k^-$，表示我们对系统的状态越来越有把握。
-	\end{block}
-\end{frame}
-
-%================================================================
-\section{数值推演实例}
-%================================================================
-
-\begin{frame}
-	\frametitle{场景设定：无人机悬停高度估计}
-	\begin{columns}
-		\column{0.5\textwidth}
-		\textbf{场景：}
-		\begin{itemize}
-			\item 我们想知道无人机的真实高度 $x$。
-			\item 无人机正在悬停，理论上不动，但有风吹（过程噪声）。
-			\item 使用气压计测量高度，但有误差（测量噪声）。
-		\end{itemize}
-
-		\column{0.5\textwidth}
-		\textbf{参数初始化 ($t=0$)：}
-		\begin{itemize}
-			\item \textbf{初始估计} $\hat{x}_0 = 10m$。
-			\item \textbf{初始不确定性} $P_0 = 5$ (不太确信)。
-		\end{itemize}
-		\textbf{系统参数：}
-		\begin{itemize}
-			\item 状态转移 $F=1$ (不动)。
-			\item 过程噪声 $Q=1$。
-			\item 测量噪声 $R=4$ (传感器一般)。
-			\item 观测矩阵 $H=1$ (直接测高度)。
-		\end{itemize}
-	\end{columns}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Step 1: 预测 (Prediction) @ t=1}
-	还没看传感器，先根据物理规律猜。
-
-	\begin{block}{1. 状态预测}
-		$$ \hat{x}_1^- = F \hat{x}_0 = 1 \times 10 = 10 $$
-		\small (我猜它还在 10m 处)
-	\end{block}
-
-	\begin{block}{2. 协方差预测}
-		$$ P_1^- = F P_0 F^T + Q = 1 \times 5 \times 1 + 1 = 6 $$
-		\small (如果不看传感器，不确定性从 5 增加到了 6，因为风在吹)
-	\end{block}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Step 2: 计算卡尔曼增益 @ t=1}
-	现在传感器读数来了：$\bm{z}_1 = 12m$。
-
-	\begin{block}{3. 计算增益 K}
-		$$ K_1 = \frac{P_1^- H^T}{H P_1^- H^T + R} = \frac{6 \times 1}{1 \times 6 \times 1 + 4} = \frac{6}{10} = 0.6 $$
-	\end{block}
-
-	\textbf{解读：}
-	\begin{itemize}
-		\item $K=0.6$ 意味着我们把 \textbf{60\%} 的信任给了观测值(残差)，\textbf{40\%} 保留给预测值。
-		\item 为什么信观测多一点？因为预测误差方差(6) 大于 测量噪声方差(4)。
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Step 3: 更新 (Update) @ t=1}
-	融合预测和观测，得到最优结果。
-
-	\begin{alertblock}{4. 状态更新}
-		$$ \hat{x}_1 = \hat{x}_1^- + K_1 (z_1 - \hat{x}_1^-) $$
-		$$ \hat{x}_1 = 10 + 0.6 \times (12 - 10) = 10 + 1.2 = \mathbf{11.2m} $$
-	\end{alertblock}
-
-	\begin{block}{5. 协方差更新}
-		$$ P_1 = (1 - K_1 H) P_1^- = (1 - 0.6) \times 6 = 0.4 \times 6 = \mathbf{2.4} $$
-	\end{block}
-
-	\textbf{结果：}
-	\begin{itemize}
-		\item 估计值 11.2m 介于 10m 和 12m 之间，偏向观测值。
-		\item 不确定性从 6 骤降至 2.4。滤波让我们更自信了！
-	\end{itemize}
-\end{frame}
-
-%================================================================
-\section{工程应用与仿真}
-%================================================================
-
-\begin{frame}
-	\frametitle{仿真案例：一维小车位置追踪}
-	\textbf{场景假设：}
-	\begin{itemize}
-		\item 小车做匀速运动，速度 $v=1m/s$。
-		\item 过程噪声 $\bm{Q}$：路面颠簸导致速度微小波动。
-		\item 测量噪声 $\bm{R}$：GPS 定位误差 $\pm 5m$。
-	\end{itemize}
-
-\end{frame}
-\begin{frame}
-	\frametitle{仿真案例：一维小车位置追踪}
-	% \vspace{-5cm}
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width = .5\textwidth]{Kal.png}
-		\caption{利用Matlab模拟卡尔曼滤波}
-	\end{figure}
-\end{frame}
-\begin{frame}
-	\frametitle{参数 $\bm{Q}$ 与 $\bm{R}$ 的调节策略}
-	在信息工程实践中，$\bm{F}$ 和 $\bm{H}$ 通常由物理系统决定，但 $\bm{Q}$ 和 $\bm{R}$ 是调试的关键。
-
-	\begin{columns}
-		\column{0.5\textwidth}
-		\begin{block}{信任模型 ($\bm{Q}$ 小, $\bm{R}$ 大)}
-			\begin{itemize}
-				\item 滤波结果非常平滑
-				\item 对突变反应滞后 (Lag)
-			\end{itemize}
-		\end{block}
-
-		\column{0.5\textwidth}
-		\begin{block}{信任观测 ($\bm{Q}$ 大, $\bm{R}$ 小)}
-			\begin{itemize}
-				\item 紧跟观测值变化
-				\item 引入较多噪声 (Noise)
-			\end{itemize}
-		\end{block}
-	\end{columns}
-
-	\vspace{0.5cm}
-	\textbf{结论：} 调参本质上是在\textbf{响应速度}与\textbf{平滑度}之间做权衡。
-\end{frame}
-
-\begin{frame}
-	\frametitle{进阶：多传感器融合 (Sensor Fusion)}
-	卡尔曼滤波是多传感器融合的基石。
-
-	\textbf{案例：无人机姿态解算}
-	\begin{itemize}
-		\item \textbf{陀螺仪 (Gyro)}：短时精度高，长时有积分漂移。
-		\item \textbf{加速度计 (Accel)}：静态精度高，动态噪声大。
-		\item \textbf{融合方案}：利用 Kalman Filter 融合两者数据。
-		      \begin{equation*}
-			      \text{Optimal Angle} = K \cdot \text{Accel} + (1-K) \cdot \text{Gyro}
-		      \end{equation*}
-	\end{itemize}
-\end{frame}
-
-%================================================================
-\section{扩展卡尔曼滤波 (EKF)}
-%================================================================
-
-\begin{frame}
-	\frametitle{1. 线性系统的局限性}
-	\begin{alertblock}{标准 KF 的致命弱点}
-		标准卡尔曼滤波假设系统是\textbf{线性 (Linear)} 的：
-		$$ \bm{x}_k = \bm{F}\bm{x}_{k-1} \quad \text{和} \quad \bm{z}_k = \bm{H}\bm{x}_k $$
-	\end{alertblock}
-
-	\textbf{然而，现实世界充满了非线性：}
-	\begin{itemize}
-		\item \textbf{机器人运动}：$x_{new} = x_{old} + v \cdot \cos(\theta) \cdot \Delta t$ （包含三角函数）
-		\item \textbf{雷达观测}：$r = \sqrt{x^2 + y^2}$ （包含平方根）
-	\end{itemize}
-
-	\vspace{0.2cm}
-	\textbf{问题：} 高斯分布经过非线性变换后，\textbf{不再是高斯分布}（形状会扭曲），导致标准 KF 的公式失效。
-\end{frame}
-
-\begin{frame}
-	\frametitle{2. 解决思路：线性化 (Linearization)}
-	既然非线性太难处理，我们能不能在\textbf{局部}把它看作线性的？
-
-	\begin{block}{泰勒级数展开 (Taylor Series Expansion)}
-		对于非线性函数 $f(x)$，我们在估计点 $\hat{x}$ 附近做一阶展开：
-		\begin{equation}
-			f(x) \approx f(\hat{x}) + \underbrace{\frac{\partial f}{\partial x}\bigg|_{x=\hat{x}}}_{\text{切线斜率}} \cdot (x - \hat{x})
-		\end{equation}
-	\end{block}
-
-	\begin{itemize}
-		\item 我们抛弃高阶项，只保留一阶导数。
-		\item 用\textbf{切线}来近似\textbf{曲线}。
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{3. 核心工具：雅可比矩阵 (Jacobian Matrix)}
-	在多维系统中，导数变成了\textbf{雅可比矩阵}。它是 EKF 的核心。
-
-	假设状态转移函数为 $\bm{x}_k = f(\bm{x}_{k-1}, \bm{u}_k)$，则雅可比矩阵 $\bm{F}_k$ 为：
-
-	\begin{equation}
-		\bm{F}_k = \frac{\partial f}{\partial \bm{x}} =
-		\begin{bmatrix}
-			\frac{\partial f_1}{\partial x_1} & \frac{\partial f_1}{\partial x_2} & \cdots \\
-			\frac{\partial f_2}{\partial x_1} & \frac{\partial f_2}{\partial x_2} & \cdots \\
-			\vdots                            & \vdots                            & \ddots
-		\end{bmatrix}
-	\end{equation}
-
-	\textbf{物理意义：} 描述了输入微小变化如何影响输出的每一个维度。
-\end{frame}
-
-\begin{frame}
-	\frametitle{4. EKF 算法流程的变化 (对比 KF)}
-	EKF 的步骤与 KF 几乎一样，区别在于\textbf{如何传递均值}和\textbf{如何传递协方差}。
-
-	\begin{table}
-		\centering
-		\small
-		\begin{tabular}{l|c|c}
-			\toprule
-			步骤             & 标准 KF (线性)                                            & 扩展 KF (非线性)                                                                         \\
-			\midrule
-			\textbf{状态预测}  & $\bm{x}^- = \bm{F}\bm{x}$                             & $\bm{x}^- = \mathbf{f}(\bm{x}, \bm{u})$ \textcolor{blue}{(直接代入函数)}                  \\
-			\textbf{协方差预测} & $\bm{P}^- = \bm{F}\bm{P}\bm{F}^T + \bm{Q}$            & $\bm{P}^- = \mathbf{F_k}\bm{P}\mathbf{F_k}^T + \bm{Q}$ \textcolor{red}{(用雅可比)}      \\
-			\midrule
-			\textbf{卡尔曼增益} & $\bm{K} = \bm{P}^-\bm{H}^T(\dots)^{-1}$               & $\bm{K} = \bm{P}^-\mathbf{H_k}^T(\mathbf{H_k}\bm{P}^-\mathbf{H_k}^T + \bm{R})^{-1}$ \\
-			\textbf{状态更新}  & $\bm{x} = \bm{x}^- + \bm{K}(\bm{z} - \bm{H}\bm{x}^-)$ & $\bm{x} = \bm{x}^- + \bm{K}(\bm{z} - \mathbf{h}(\bm{x}^-))$                         \\
-			\bottomrule
-		\end{tabular}
-	\end{table}
-\end{frame}
-
-\begin{frame}
-	\frametitle{5. 经典案例：雷达追踪 (Radar Tracking)}
-	\begin{columns}
-		\column{0.5\textwidth}
-		\textbf{状态向量 (直角坐标系)：} \\
-		$\bm{x} = [p_x, p_y, v_x, v_y]^T$ \\
-		(飞机的位置和速度)
-
-		\vspace{0.3cm}
-		\textbf{观测向量 (极坐标系)：} \\
-		$\bm{z} = [\rho, \phi, \dot{\rho}]^T$ \\
-		(雷达测量的距离、角度、径向速度)
-
-		\column{0.5\textwidth}
-		\textbf{非线性观测函数 $h(\bm{x})$：}
-		\begin{itemize}
-			\item 距离：$\rho = \sqrt{p_x^2 + p_y^2}$
-			\item 角度：$\phi = \arctan(p_y / p_x)$
-		\end{itemize}
-	\end{columns}
-
-	\vspace{0.5cm}
-	\begin{block}{问题}
-		$p_x$ 和 $p_y$ 是状态，但在观测方程里被平方和求根了。这就是典型的非线性！必须求雅可比矩阵 $\bm{H}_j$。
-	\end{block}
-\end{frame}
-
-\begin{frame}
-	\frametitle{6. 雷达雅可比矩阵的计算}
-	我们需要对 $h(\bm{x})$ 求偏导数来得到 $\bm{H}_j$：
-
-	\small
-	\begin{equation}
-		\bm{H}_j = \frac{\partial h}{\partial \bm{x}} =
-		\begin{bmatrix}
-			\frac{\partial \rho}{\partial p_x} & \frac{\partial \rho}{\partial p_y} & 0 & 0 \\
-			\frac{\partial \phi}{\partial p_x} & \frac{\partial \phi}{\partial p_y} & 0 & 0
-		\end{bmatrix}
-		=
-		\begin{bmatrix}
-			\frac{p_x}{\sqrt{p_x^2+p_y^2}} & \frac{p_y}{\sqrt{p_x^2+p_y^2}} & 0 & 0 \\
-			\frac{-p_y}{p_x^2+p_y^2}       & \frac{p_x}{p_x^2+p_y^2}        & 0 & 0
-		\end{bmatrix}
-	\end{equation}
-
-	\vspace{0.3cm}
-	\textbf{意义：} 这个矩阵把\textbf{位置的不确定性}（直角坐标误差），投影到了\textbf{观测的不确定性}（距离和角度误差）上。
-\end{frame}
-
-\begin{frame}
-	\frametitle{7. EKF 的优缺点分析}
-
-	\begin{block}{优点 (Why use it?)}
-		\begin{itemize}
-			\item \textbf{事实标准}：目前导航系统（GPS/IMU 融合）、机器人定位 (SLAM) 的首选基础算法。
-			\item \textbf{计算量适中}：比粒子滤波 (Particle Filter) 快得多。
-		\end{itemize}
-	\end{block}
-
-	\begin{alertblock}{缺点 (Watch out!)}
-		\begin{itemize}
-			\item \textbf{发散风险}：如果线性化点选得不好（初始估计太差），泰勒展开误差会很大，导致滤波器发散。
-			\item \textbf{繁琐的雅可比}：对于复杂的系统，手算雅可比矩阵非常痛苦且容易出错。
-		\end{itemize}
-	\end{alertblock}
-\end{frame}
-
-\begin{frame}
-	\frametitle{8. 超越 EKF：无迹卡尔曼滤波 (UKF)}
-	当非线性极其严重时，EKF 的线性化误差无法接受。
-
-	\begin{columns}
-		\column{0.6\textwidth}
-		\textbf{UKF (Unscented Kalman Filter) 思路：}
-		\begin{itemize}
-			\item 不去线性化函数（不算雅可比）。
-			\item 而是\textbf{近似概率分布}。
-			\item 选取几个关键点（Sigma Points），把它们扔进非线性函数里算一算，然后再算出新的均值和方差。
-		\end{itemize}
-
-		\column{0.4\textwidth}
-		\begin{block}{核心理念}
-			\small
-			“近似概率分布比近似非线性函数要容易得多。”
-			\\ —— Julier \& Uhlmann
-		\end{block}
-	\end{columns}
-\end{frame}
-
-%================================================================
-%================================================================
-\section{前沿探索}
-%================================================================
-
-% --- 第一部分：基于顶级综述的算法演进 (Khodarahmi et al., 2023) ---
-
-\begin{frame}
-	\frametitle{1. 算法演进全景 (Based on Top Review)}
-	\small
-	卡尔曼滤波已发展为庞大的家族。针对不同场景，主流算法的特性对比如下\footcite{khodarahmi_review_2023}：
-
-	% 表格：主流算法对比
-	\begin{table}
-		\centering
-		\renewcommand{\arraystretch}{1.2}
-		\resizebox{0.95\textwidth}{!}{
-			\begin{tabular}{l l l l}
-				\toprule
-				\textbf{算法}       & \textbf{核心机制}      & \textbf{优势 (Pros)}   & \textbf{适用场景} \\
-				\midrule
-				\textbf{Basic KF} & 线性递归最小二乘           & 计算极快，线性最优            & 卫星导航，稳态控制     \\
-				\textbf{EKF}      & 泰勒展开线性化 ($\bm{J}$) & 工业标准，适用性广            & 机器人定位 (SLAM)  \\
-				\textbf{UKF}      & 无迹变换 (Sigma点)      & 无需导数，精度更高            & 复杂非线性系统       \\
-				\textbf{IMM}      & 多模型概率交互            & \textbf{搞定机动目标}，平滑切换 & 导弹/无人机追踪      \\
-				\bottomrule
-			\end{tabular}
-		}
-	\end{table}
-\end{frame}
-
-% --- 第二部分：KF 与神经网络的结合 (Feng et al., 2023) ---
-
-\begin{frame}
-	\frametitle{2. 突破瓶颈：混合模型 (Hybrid Models) 的诞生}
-
-	\begin{columns}
-		\column{0.6\textwidth}
-		% 左侧：放流程图（占位符）
-		\centering
-		\begin{figure}
-			% 这里的 hybrid.png 就是您那张流程图
-			% keepaspectratio 保持长宽比，width 设置为栏宽的 95%
-			\includegraphics[width=0.95\textwidth, keepaspectratio]{hybrid.png}
-			\caption{状态估计技术融合路线图\footcite{feng_review_2023}}
-		\end{figure}
-
-		\column{0.4\textwidth}
-		% 右侧：文字解说
-		\textbf{为何要融合？}
-		\begin{itemize}
-			\item \textbf{传统 KF}：依赖精确物理模型，难以处理未知环境。
-			\item \textbf{神经网络 (NN)}：强大的数据拟合能力，但缺乏物理约束。
-		\end{itemize}
-
-		\vspace{0.3cm}
-		\textbf{融合的三种模式：}
-		\begin{enumerate}
-			\small
-			\item \textbf{串联}：互为预处理/后处理。
-			\item \textbf{训练}：KF 优化 NN 权重。
-			\item \textbf{辅助 (Aided)}：\textcolor{red}{\textbf{NN 实时估计 KF 参数 ($\bm{Q}, \bm{R}$)}}。
-		\end{enumerate}
-	\end{columns}
-\end{frame}
-\begin{frame}
-	\frametitle{深度思考：卡尔曼滤波 vs 机器学习}
-	\begin{columns}
-		% 左栏：卡尔曼滤波 (Model-Based)
-		\column{0.48\textwidth}
-		\begin{block}{卡尔曼滤波 (KF)}
-			\centering \textbf{“理性的物理学家”}
-			\begin{itemize}
-				\item \textbf{驱动核心}：物理模型 ($\bm{F}, \bm{H}$) + 概率统计。
-				\item \textbf{透明度}：\textbf{白盒}。每一步都有明确物理含义，可解释性强。
-				\item \textbf{优势}：小样本即可工作，不仅给结果，还给\textbf{置信度} ($\bm{P}$)。
-				\item \textbf{劣势}：模型必须已知且准确。
-			\end{itemize}
-		\end{block}
-
-		% 右栏：机器学习 (Data-Driven)
-		\column{0.48\textwidth}
-		\begin{exampleblock}{机器学习 (ML/NN)}
-			\centering \textbf{“经验丰富的工匠”}
-			\begin{itemize}
-				\item \textbf{驱动核心}：海量数据 + 拟合映射。
-				\item \textbf{透明度}：\textbf{黑盒}。内部权重难以解释。
-				\item \textbf{优势}：能拟合极其复杂的非线性关系，无需懂物理机理。
-				\item \textbf{劣势}：数据饥渴，对未见过的场景泛化能力弱。
-			\end{itemize}
-		\end{exampleblock}
-	\end{columns}
-
-	\vspace{0.4cm}
-	\centering
-	\textbf{融合的哲学：}
-	\fcolorbox{blue}{white}{用 KF 的逻辑框架约束 ML 的发散，用 ML 的拟合能力弥补 KF 的模型缺陷。}
-\end{frame}
-% --- 第三部分：锂电池 SOC 估计应用 ---
-
-\begin{frame}
-	\frametitle{3. 落地应用：锂电池 SOC 状态估计}
-	\small
-	\textbf{背景：} SOC (State of Charge) 是电池管理系统的核心。估算错误会导致过充/过放，造成永久性损伤。
-
-	\vspace{0.3cm}
-	\textbf{核心技术栈 (Tech Stack)：}
-	\begin{columns}[t]
-		\column{0.48\textwidth}
-		\begin{block}{1. 非线性滤波 (NLKFs)}
-			用于处理电池高度非线性的电压特性：
-			\begin{itemize}
-				\item \textbf{EKF / AEKF} (自适应扩展卡尔曼)
-				\item \textbf{UKF / AUKF} (自适应无迹卡尔曼)
-			\end{itemize}
-		\end{block}
-
-		\column{0.48\textwidth}
-		\begin{block}{2. 在线参数辨识}
-			实时更新电池模型参数（如内阻）：
-			\begin{itemize}
-				\item \textbf{RLS} (递归最小二乘法)
-				\item \textbf{PRBM} (多项式回归模型)
-			\end{itemize}
-		\end{block}
-	\end{columns}
-
-	\vspace{0.4cm}
-	\textbf{实验结论：}
-	在宽温域 (-5\textcelsius $\sim$ 45\textcelsius) 测试中，以下组合表现最佳：
-	\begin{center}
-		\fcolorbox{red}{white}{\textbf{PRBM-AUKF} \quad \& \quad \textbf{RLS-AUKF}}
-	\end{center}
-	\footnotesize \textit{* AUKF (Adaptive UKF) 展现了比传统 EKF 更高的精度和鲁棒性。\footcite{hossain_kalman_2022}}
-\end{frame}
-
-
-%================================================================
-\section{结论}
-%================================================================
-
-\begin{frame}
-	\frametitle{总结}
-
-	\begin{enumerate}
-		\item \textbf{有效性}：卡尔曼滤波利用了系统的\textbf{冗余信息}（模型预测 + 传感器观测），从而降低了整体的不确定性。
-		\item \textbf{高效性}：递归算法，只需存储上一刻状态，非常适合\textbf{嵌入式系统}及\textbf{实时控制}。
-		\item \textbf{局限性}：
-		      \begin{itemize}
-			      \item 假设系统是线性的 (Linear)。
-			      \item 假设噪声是高斯的 (Gaussian)。
-		      \end{itemize}
-		\item \textbf{拓展}：面对非线性系统，可以使用\textbf{扩展卡尔曼滤波 (EKF)}。
-	\end{enumerate}
-\end{frame}
+\input{source/结论.tex}
 
 \section{参考文献}
-\begin{frame}{参考文献}
-	\printbibliography
+\begin{frame}[allowframebreaks]{参考文献}
+	\printbibliography[heading=none]
 \end{frame}
 
 \begin{frame}
